--- a/Lab9/Lab9.vcxproj
+++ b/Lab9/Lab9.vcxproj
@@ -151,7 +151,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Task1.h" />
+    <ClInclude Include="Task2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lab9.cpp" />
